feat: add API to get compute cluster by ID
