# pkg/openapi/types.go
@@ -252,6 +252,9 @@ type ProjectIDParameter = KubernetesNameParameter
 // RegionIDParameter A Kubernetes name. Must be a valid DNS containing only lower case characters, numbers or hyphens, start and end with a character or number, and be at most 63 characters in length.
 type RegionIDParameter = KubernetesNameParameter
 
+// ComputeClusterDetailResponse Compute cluster read.
+type ComputeClusterDetailResponse = ComputeClusterRead
+
 // ComputeClusterResponse Compute cluster read.
 type ComputeClusterResponse = ComputeClusterRead
 
